# some-implementations

./: CMakeLists.txt  README.md
data structures/: segment_tree.cpp  union_find.cpp
data_structures/: fenwick_tree.cpp  graph.cpp  segment_tree.cpp  union_find.cpp
learn/: bitwise.cpp
